Fixed margin issue for reports page and large text overflow fixes

--- a/src/scss/survey.scss
+++ b/src/scss/survey.scss
@@ -183,6 +183,7 @@ body {
             margin: 10px 0;
             word-break: break-word;
             outline:none;
+            padding:20px;
             }
             input{
                 border: 1px solid rgba(181, 220, 255, 0.58);
@@ -192,6 +193,7 @@ body {
                 margin: 10px 0;
                 word-break: break-word;
                 outline:none;
+                padding:20px;
             }
             .wpsf-form-submit-button{
                 display: flex;
